--- a/sit-mod/package.json
+++ b/sit-mod/package.json
@@ -5,5 +5,6 @@
   "description": "CrossCode mod to sit anywhere. Use Backslash(\\) to sit. Use left or right bracket ([ or ]) to change the sitting head facing direction. Collision is disabled while sitting to allow sitting on top of objects.",
   "homepage": "https://github.com/gen3vra/cc-sit-mod",
   "main": "main.js",
+  "prestart": "prestart.js",
   "module": "true"
 }
